RESOLVED FIXED177393
REGRESSION(r221632): Re-enable configuration.HTTPCookieStorage on session without credentials
https://bugs.webkit.org/show_bug.cgi?id=177393
Summary REGRESSION(r221632): Re-enable configuration.HTTPCookieStorage on session wit...
John Wilander
Reported 2017-09-22 15:34:14 PDT
The following setting on m_statelessSession (used to be m_sessionWithoutCredentialStorage) caused regressions on a number of sites: configuration.HTTPCookieStorage = nil; configuration.HTTPCookieAcceptPolicy = NSHTTPCookieAcceptPolicyNever; We should re-enable the cookie jar until we've figured out the cause of the regression.
Attachments
Patch (2.01 KB, patch)
2017-09-22 15:47 PDT, John Wilander
no flags
John Wilander
Comment 1 2017-09-22 15:36:03 PDT
Follow-up investigation to be handled in https://bugs.webkit.org/show_bug.cgi?id=177394.
Radar WebKit Bug Importer
Comment 2 2017-09-22 15:43:53 PDT
John Wilander
Comment 3 2017-09-22 15:47:50 PDT
Brent Fulgham
Comment 4 2017-09-22 16:09:01 PDT
Comment on attachment 321597 [details] Patch r=me
John Wilander
Comment 5 2017-09-22 16:09:50 PDT
Comment on attachment 321597 [details] Patch Thanks, Brent!
WebKit Commit Bot
Comment 6 2017-09-22 16:37:27 PDT
Comment on attachment 321597 [details] Patch Clearing flags on attachment: 321597 Committed r222414: <http://trac.webkit.org/changeset/222414>
WebKit Commit Bot
Comment 7 2017-09-22 16:37:28 PDT
All reviewed patches have been landed. Closing bug.
John Wilander
Comment 8 2017-10-04 09:41:44 PDT
*** Bug 177809 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.