Re-enable configuration.HTTPCookieStorage on session without credentials https://bugs.webkit.org/show_bug.cgi?id=177393

This patch rolls back the crucial change to the network session
without credentials that landed in r221632:
<http://trac.webkit.org/changeset/221632>

Reviewed by Brent Fulgham.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
    Commented out the disabled cookie jar and added a FIXME
    referring to https://bugs.webkit.org/show_bug.cgi?id=177394.


Canonical link: https://commits.webkit.org/193711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222414 268f45cc-cd09-0410-ab3c-d52691b4dbfc